# runtime-fmt

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: basic.rs  codegen-struct.rs  codegen.rs  tabular.rs
runtime-fmt-derive/: Cargo.toml
runtime-fmt-derive/src/: ast.rs  context.rs  lib.rs
src/: codegen.rs  erase.rs  fmt_macros.rs  lib.rs  macros.rs
tests/: bad.rs  codegen.rs  equivalence.rs  flexible.rs  ifmt.rs
