[package]
name = "runtime-fmt"
version = "0.1.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Runtime-parsed equivalent of format_args!()"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["format", "fmt", "runtime", "string", "formatting"]

repository = "https://github.com/SpaceManiac/runtime-fmt"
documentation = "https://docs.rs/runtime-fmt"

[dependencies]
