[package]
authors = ["Tad Hardesty <tad@platymuus.com>"]
description = "Runtime-based string formatting, custom derive plugin"
documentation = "https://docs.rs/runtime-fmt-derive"
keywords = ["format", "fmt", "runtime", "string", "formatting"]
license = "MIT/Apache-2.0"
name = "runtime-fmt-derive"
readme = "README.md"
repository = "https://github.com/SpaceManiac/runtime-fmt"
version = "0.1.0"

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[lib]
proc-macro = true
