[package]
name = "runtime-fmt-derive"
version = "0.2.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Runtime-based string formatting, custom derive plugin"
license = "MIT/Apache-2.0"
keywords = ["format", "fmt", "runtime", "string", "formatting"]

repository = "https://github.com/SpaceManiac/runtime-fmt"
documentation = "https://docs.rs/runtime-fmt-derive"

[dependencies]
quote = "0.3.15"
syn = "0.11.11"

[lib]
proc-macro = true
